# context-kit

./: .gitignore  CLAUDE.md  README.md  README_old.md  cxk.py  pyproject.toml  run_tests.py  state.py  task.md  test_runner.py
.github/workflows/: test-pr.yml
auth_server/: __init__.py  auth_server.py
commands/: create_spec.py  init.py  mcp.py
engine/: __init__.py  globals.py  template_engine.py
mcp_client/: __init__.py  binary_data_handler.py  client_session_provider.py  config.py  mcp_logger.py  session_manager.py  token_storage.py
prompt/: __init__.py  prompt_helper.py
tests/: README.md  mcp_test_server.py  test_binary_data_handler.py  test_runner.py
tests/e2e/: test_e2e.py
tests/files/: image1.avif
tests/templates/: spec1.md  spec10.md  spec2.md  spec3.md  spec4.md  spec5.md  spec6.md  spec7.md  spec8.md  spec9.md
util/: parse.py  terminal.py
