[project]
name = "context-kit"
version = "0.1.1"
description = "A CLI tool and MCP client, used to create spec files for AI coding agents with context baked in, based on reusable spec templates"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "jinja2>=3.1.6",
    "keyring>=24.0.0",
    "mcp[cli]>=1.14.0",
    "pydantic>=2.11.7",
    "prompt_toolkit>=3.0.36,<3.0.48",
    "questionary>=2.1.0",
    "uvicorn>=0.24.0",
]

[project.scripts]
cxk = "cxk:main"

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[dependency-groups]
dev = [
    "debugpy>=1.8.16",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.12.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["commands", "engine", "mcp_client", "prompt", "auth_server", "cxk.py"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
